--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
 body {
-  padding-top: 161px;
+  /* padding-top: 161px; */
+  padding-top: 120px;
   margin: 0;
-  font-family: 'League Spartan', sans-serif;
+  /* font-family: 'League Spartan', sans-serif; */
+  font-family: 'Playfair Display SC', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(250, 247, 242);
+
   
 }
 
@@ -14,9 +18,15 @@ code {
 h1,h2,h3,h4,h5,h6,p,span{
   margin: 0;
 }
-
+.cabecera{
+  box-shadow: 0px 4px 9px 0px rgba(0,0,0,0.05);
+  background-color: rgb(250, 247, 242);
+}
+.foot{
+  box-shadow: 0px 7px 9px 0px rgba(0,0,0,0.05) inset;
+}
 .tarjeta {
-  width: 200px;
+  width: 230px;
   overflow: hidden;
   box-shadow: 5px 5px 20px rgb(0, 0, 0, 0.4);
   border-radius: 6px;
@@ -27,7 +37,7 @@ h1,h2,h3,h4,h5,h6,p,span{
 
 @media(min-width:576px) {
   .tarjeta {
-      width: 300px;
+      width: 230px;
   }
 
 }
@@ -43,9 +53,10 @@ h1,h2,h3,h4,h5,h6,p,span{
 }
 .classPrecio {
   padding: 5px;
-  font-weight: 600;
+  font-weight: 400;
   color: black;
   font-size: 1.3rem;
+  font-family: 'League Spartan'
   
 
 }
@@ -63,6 +74,19 @@ h1,h2,h3,h4,h5,h6,p,span{
   font-size: 0.8rem;
 }
 .alto{
-min-height: calc(100vh - 341px);
+min-height: calc(100vh - 300px);
+background-color: rgb(250, 247, 242);
 
+}
+.descuento {
+  text-decoration: line-through;
+}
+
+
+.descuento-percent {
+  font-size: 16px;
+  margin-top: 10px;
+}
+.vaciar{
+  cursor: pointer;
 }
