se solucione problema con cuotas de firebase

--- a/src/index.css
+++ b/src/index.css
@@ -139,4 +139,15 @@ span {
     max-width:none ;
   }
   }
+  @media (max-width: 767px) {
+    .brand {
+      display: none;
+    }
+  }
+  
+  
+  
+  
+  
+  
   
